# ESP_MODE_SLEEP

Test_light_sleep/: CMakeLists.txt  sdkconfig
Test_light_sleep/component/deepSleep/: CMakeLists.txt  Kconfig.projbuild  deep_sleep.c  deep_sleep.h  ext_wakeup.c  gpio_wakeup.c  touch_wakeup.c
Test_light_sleep/component/lightSleep/: CMakeLists.txt  gpio_wakeup.c  light_sleep.c  light_sleep.h  timer_wakeup.c  touch_wakeup.c  uart_wakeup.c
Test_light_sleep/main/: main.c
